--- a/metadata/preview/azure-resourcemanager-appplatform.json
+++ b/metadata/preview/azure-resourcemanager-appplatform.json
@@ -1,7 +1,7 @@
 {
   "Name": "azure-resourcemanager-appplatform",
-  "Version": "2.26.0-beta.1",
-  "DevVersion": null,
+  "Version": "2.28.0-alpha.20230622.1",
+  "DevVersion": "2.28.0-alpha.20230622.1",
   "DirectoryPath": "sdk/resourcemanager/azure-resourcemanager-appplatform",
   "ServiceDirectory": "resourcemanager",
   "ReadMePath": "sdk/resourcemanager/azure-resourcemanager-appplatform/README.md",
@@ -10,5 +10,5 @@
   "SdkType": "mgmt",
   "IsNewSdk": true,
   "ArtifactName": "azure-resourcemanager-appplatform",
-  "ReleaseStatus": "2023-04-17"
+  "ReleaseStatus": "Unreleased"
 }
